--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -14,7 +14,7 @@
 }
 .selectBox.disabled {
   pointer-events: none;
-  background: #ddd;
+  background: #eee;
 }
 .selectBox > input {
   flex: 1;
@@ -25,6 +25,9 @@
   background-color: transparent;
   cursor: default;
   z-index: 2;
+}
+.selectBox.disabled > input {
+  color: #b5b5b5;
 }
 .selectBox .highlighter {
   position: absolute;
