--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -65,6 +65,9 @@
   text-align: left;
   cursor: default;
   box-shadow: rgb(0 0 0 / 10%) 0px 0px 0px 1px, rgb(0 0 0 / 10%) 0px 4px 11px;
+  max-height: 300px;
+  overflow-y: auto;
+  overflow-x: hidden;
   z-index: 10;
 }
 .optionWindow > div {
